# state-space-playground

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: task_description.md
notebooks/: 01_choice_models.py  01b_choice_model_diagnostics.py  01c_across_epoch_stability.py  02_STATUS.md  02_place_field_model.py  03_position_decoder_comparison.py  04_oscillator_lfp.py
scripts/: check_gpu.py  save_session.py
src/state_space_playground/: __init__.py  eval.py  frank_models.py  gpu.py  parameters.py  plot.py  session.py  types.py
src/state_space_playground/data_loaders/: __init__.py  bandit_task.py  constants.py  events.py  lfp.py  position.py  spikes.py  task_variables.py  trials.py  utils.py
